--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - .env
-   # - images/a_dot_ham.jpeg
+   - assets/acazia_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
