--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   provider: ^3.1.0+1
   get_it: ^3.0.3
   http: ^0.12.0+3
+  firebase_core: ^0.4.0+9
+  firebase_messaging: ^6.0.9
 
 dev_dependencies:
   image_test_utils: ^1.0.0
