--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="FLUTTER_NOTIFICATION_CLICK" />
+            <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
@@ -28,9 +33,8 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-        <intent-filter>
-            <action android:name="FLUTTER_NOTIFICATION_CLICK" />
-            <category android:name="android.intent.category.DEFAULT" />
-        </intent-filter>
+        <meta-data
+          android:name="com.google.firebase.messaging.default_notification_channel_id"
+          android:value="default_channel_id"/>
     </application>
 </manifest>
