--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^0.12.0+3
   firebase_core: ^0.4.0+9
   firebase_messaging: ^6.0.9
+  curved_navigation_bar: ^0.3.2
 
 dev_dependencies:
   image_test_utils: ^1.0.0
